Sau khi sua doi

--- a/baitap.html
+++ b/baitap.html
@@ -64,7 +64,7 @@
             </div>
             <div class="button">
                 <button type="button" id="saveButton">Lưu</button>
-                <button type="reset" id="delete">Xóa</button>
+                <button type="reset" id="delete" onclick="deleteRow()">Xóa</button>
             </div>
         </form>
     </div>
